# letlang

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  letlang.spec  pyproject.toml
examples/: .gitignore  dummy.let  hello.let
examples/constraints/: letproject.toml
examples/dummy/: letproject.toml
examples/effects/: letproject.toml
examples/fibonacci/: letproject.toml
examples/fizzbuzz/: letproject.toml
examples/greet/: letproject.toml
examples/hello-world/: letproject.toml
examples/typechecks/: letproject.toml
letlang_ast/: Cargo.toml
letlang_ast/src/: lib.rs
letlang_cli/src/: main.rs
letlang_compiler/: Cargo.toml  cli.py  codegen.py  config.py  model.py  semantic.py  utils.py
letlang_parser/: Cargo.toml  build.rs
letlang_parser/src/: lib.rs
letlang_parser/src/ast/: mod.rs  unit.rs
letlang_parser/src/ast/class/: mod.rs  param.rs
letlang_parser/src/ast/expression/: calls.rs  container.rs  containers.rs  control_flow.rs  controlflow.rs  formula.rs  literal.rs  messaging.rs  mod.rs  operators.rs  pattern.rs  symbol.rs
letlang_parser/src/ast/funcs/: call.rs  mod.rs  param.rs
letlang_parser/src/ast/params/: call.rs  cons.rs  mod.rs  types.rs
letlang_parser/src/ast/statement/: class.rs  constant.rs  effect.rs  export.rs  func.rs  import.rs  mod.rs  proposition.rs
letlang_parser/src/ast/types/: base.rs  container.rs  containers.rs  function.rs  mod.rs  param.rs  reference.rs  sum_types.rs
letlang_parser/src/grammar/: mod.rs
letlang_parser/src/lexer/: mod.rs
letlang_parser/src/parser/: grammar.lalrpop  lexer.rs  mod.rs  tokens.rs
letlang_runtime/: Cargo.toml
lib/: README.md  stdio.let
scripts/: dist.sh
sources/compiler/backend/: Cargo.toml
sources/compiler/backend/src/: lib.rs
sources/compiler/backend/src/prelude/: mod.rs
sources/compiler/backend/src/steps/: mod.rs
sources/compiler/backend/src/steps/codegen/: mod.rs
sources/compiler/backend/src/steps/codegen/context/: mod.rs
sources/compiler/backend/src/steps/codegen/model/: import.rs  mod.rs
sources/compiler/backend/src/steps/codegen/model/decls/: mod.rs
sources/compiler/backend/src/steps/scope/: mod.rs
sources/compiler/backend/src/steps/scope/context/: env.rs  mod.rs  stack.rs  symbol.rs
sources/compiler/backend/src/steps/scope/model/: import.rs  mod.rs
sources/compiler/backend/src/steps/scope/model/decls/: mod.rs
sources/compiler/backend/src/steps/scope/model/expr/: lit.rs  mod.rs
sources/compiler/backend/src/steps/scope/model/pat/: mod.rs
sources/compiler/backend/src/steps/scope/model/typ/: mod.rs
sources/compiler/builder/: Cargo.toml
sources/compiler/builder/src/: lib.rs
sources/compiler/builder/src/cargo/: mod.rs
sources/compiler/builder/src/context/: mod.rs
sources/compiler/cli/: Cargo.toml
sources/compiler/cli/src/: args.rs  lib.rs  main.rs  prelude.rs
spec/: book.toml
src/: lib.rs  main.rs
tests/: conftest.rs
tools/: README.md
www/: .gitignore  LICENSE.txt  README.md  build.sh  config.toml  config.yaml  netlify.toml  package-lock.json  package.json  tailwind.config.js
(+594 files in other folders)
