[tool.poetry]
name = "letlang"
version = "0.1.0"
description = "Letlang Compiler"
authors = ["David Delassus <david.jose.delassus@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.10"
Jinja2 = "^3.1.2"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
click = "^8.1.3"
cattrs = "^22.1.0"
networkx = "^2.8"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
poethepoet = "^0.13.1"
maturin = "^0.12.14"
black = "^22.3.0"
isort = "^5.10.1"
pyinstaller = "^5.0.1"

[tool.black]
use-tabs = false

[tool.isort]
profile = "black"

[tool.poe.tasks]

"ci:format" = "poetry run black ."
"ci:lint" = "poetry run black --check ."

"build:parser" = "poetry run maturin develop -m letlang_parser/Cargo.toml"
"build:runtime" = [
  { shell = "cargo build --manifest-path letlang_runtime/Cargo.toml" },
  { shell = "mkdir -p ./dist/" },
  { shell = "cp -vf ./target/debug/*letlang_runtime.* ./dist/" },
]
"build:compiler" = "poetry run pyinstaller letlang.spec"
build = ["build:parser", "build:runtime", "build:compiler"]

run = "poetry run python -m letlang_compiler.cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
