[package]
name = "letlang-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ast-core = { package = "letlang-ast-core", path = "../../utils/ast-core" }
ast-macros = { package = "letlang-ast-macros", path = "../../utils/ast-macros" }
llfront = { package = "letlang-frontend", path = "../frontend" }
llbmi = { package = "letlang-bmi", path = "../bmi" }

nonempty = "0.8"
ariadne = "0.3"

syn = { version = "2.0", features = ["visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
