[package]
name = "letlang-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "letlangc"
path = "src/main.rs"

[dependencies]
llfront = { package = "letlang-frontend", path = "../frontend" }
llback = { package = "letlang-backend", path = "../backend" }
llbuild = { package = "letlang-builder", path = "../builder" }

clap = { version = "4.4", features = ["derive"] }
